# API/routes/customer.js
@@ -3,7 +3,7 @@ const { Router } = require("express");
 
 
 const verifyPermissions = require('../middlewares/authenticateToken');
-const { createCustomer, updateCustomer, getCustomersByUserId} = require('../controllers/customer');
+const { createCustomer, updateCustomer, getCustomersByUserId, deleteCustomer} = require('../controllers/customer');
 
 const router = Router();
 
@@ -15,5 +15,7 @@ router.patch('/update-customer/:id', verifyPermissions, updateCustomer);
 
 
 router.get('/get-customer/:id', verifyPermissions, getCustomersByUserId);
+
+router.delete('/delete-customer/:id', verifyPermissions, deleteCustomer);
 
 module.exports = router;
